--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 body, main {
+  scroll-behavior: smooth;
   height: 100vh;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   background-color: #ff7a7a;
   background-image: url("images/bg-intro-desktop.png");
   background-size: default;
@@ -11,8 +12,32 @@ body, main {
   background-position: default;
 }
 
+p, h1 {
+  color: white;
+}
+
 .error, .success {
   display: none;
+  color: #ff7a7a;
+  font-size: 8px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-around;
+  background-color: white;
+  padding: 15px;
+  border-radius: 5px;
+}
+
+.inputs {
+  color: black;
+  display: block;
+  margin: 5px;
+  border: solid grey 1px;
+  border-radius: 2.5px;
 }
 
 @media screen and (max-width: 500px) {
@@ -20,7 +45,7 @@ body, main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     background-color: #ff7a7a;
     background-image: url("images/bg-intro-desktop.png");
     background-size: default;
